modification for RTD

--- a/notebooks/Advection.ipynb
+++ b/notebooks/Advection.ipynb
@@ -5,7 +5,7 @@
    "id": "7abf838a",
    "metadata": {},
    "source": [
-    "## Advection mode and methods\n",
+    "# Advection mode and methods\n",
     "\n",
     "    Tutorial to define advection options\n",
     "    Mode: backward or forward\n",
