--- a/notebooks/Analytical_examples.ipynb
+++ b/notebooks/Analytical_examples.ipynb
@@ -5,7 +5,8 @@
    "id": "b55e4c4e",
    "metadata": {},
    "source": [
-    "## Analytical examples\n",
+    "# Analytical examples\n",
+    "\n",
     "This tutorial illustrates how to define\n",
     "u,v velocities from two analytical fields:\n",
     "1) field from a saddle point\n",
