--- a/notebooks/Lagrangian.ipynb
+++ b/notebooks/Lagrangian.ipynb
@@ -5,7 +5,7 @@
    "id": "664da34d",
    "metadata": {},
    "source": [
-    "## Lagrangian diagnostics computation\n",
+    "# Lagrangian diagnostics computation\n",
     "\n",
     "This notebook provides a tutorial to compute **Lagrangian diagnostics** from velocity fields, including:\n",
     "\n",
