--- a/notebooks/Ocean_examples.ipynb
+++ b/notebooks/Ocean_examples.ipynb
@@ -5,7 +5,7 @@
    "id": "a23000a8",
    "metadata": {},
    "source": [
-    "## Ocean examples\n",
+    "# Ocean examples\n",
     "\n",
     "This tutorial shows how to use 2D oceanfields (from satellite or model outputs) to advect numerical particles.\n",
     "    \n",
